# clawmama

./: .gitignore  CLAUDE.md  README.md  config.yaml  flake.nix  main.py  pyproject.toml  requirements.txt  run.py  template.config.yaml
.claude/: settings.json
bot/: handlers.py
clawkid/: README.md  clawkid.py  requirements.txt
clawmama/: __init__.py  clawkid_host.py  logging_.py
clawmama/bot/: __init__.py  handlers.py
clawmama/config/: __init__.py
clawmama/vm/: __init__.py  backup.py  database.py  firecracker.py  hyperv.py  interface.py  provisioner.py  security.py
config/: __init__.py
scripts/: clawmama-network.service  clawmama.service  setup-network.sh  test_clawkid.py  vsock_proxy.py
tests/: conftest.py
tests/integration/: conftest.py  test_firecracker_lifecycle.py  test_hyperv_lifecycle.py
tests/unit/: test_backup.py  test_database.py  test_firecracker.py  test_hyperv.py
vm/: __init__.py  backup.py  database.py  firecracker.py  provisioner.py  security.py
