[project]
name = "clawmama"
version = "0.1.0"
description = "Telegram bot for Firecracker microVM management"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
]

[project.scripts]
clawmama = "clawmama.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clawmama*"]

[tool.ty.environment]
python = ".venv"
