[project]
name = "clawmama"
version = "0.1.0"
description = "Telegram bot for Firecracker microVM management"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "zstandard>=0.23.0",
    "requests[socks]>=2.31.0",
]

[project.scripts]
clawmama = "clawmama.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawmama*"]

[tool.uv]
package = true

[tool.ty.environment]
python = ".venv"
