[project]
name = "clawmama"
version = "0.1.0"
description = "Telegram bot for Firecracker microVM management"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "zstandard>=0.23.0",
    "requests[socks]>=2.31.0",
    "pywinrm>=0.4.0",
]

[project.scripts]
clawmama = "clawmama.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawmama*"]

[tool.uv]
package = true

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Hyper-V host)",
]
